--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -13,6 +13,11 @@
     padding-top: 51px;
     padding-bottom: 33px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 52px;
+    padding-bottom: 32px;
+  }
 }
 
 .page-footer__logo {
@@ -34,7 +39,7 @@
 .page-footer__social {
   padding-left: 59px;
   padding-right: 59px;
-  padding-top: 25px;
+  padding-top: 23px;
   display: flex;
 
   @media (min-width: @tablet-width) {
@@ -43,7 +48,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
     padding: 0;
-    padding-top: 4px;
+    padding-top: 2px;
   }
 
   @media (min-width: @desktop-width) {
@@ -52,8 +57,6 @@
 }
 
 .page-footer__copyright {
-  padding-top: 14px;
-  padding-bottom: 17px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -69,6 +72,6 @@
     padding: 0;
     margin-left: auto;
     align-items: flex-start;
-    padding-top: 7px;
+    padding-top: 11px;
   }
 }
