--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -48,5 +48,15 @@
 }
 
 .page-header__logo {
-  //height: 41px;
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
