--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -16,7 +16,7 @@
 
 .social__item {
   margin-right: 41px;
-  padding-bottom: 27px;
+  padding-bottom: 23px;
 
   &:nth-child(3n) {
     margin-right: 0;
@@ -35,6 +35,10 @@
   color: @basic-black;
 
   &:hover {
+    color: @special-green-underline-2;
+  }
+
+  &:focus {
     color: @special-green-underline-2;
   }
 
