--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -19,6 +19,8 @@
 
   @media (min-width: @desktop-width) {
     width: 262px;
+    padding-top: 15px;
+    margin-bottom: 35px;
 
     &:nth-last-child(-n+3) {
       margin-bottom: 16px;
@@ -47,13 +49,17 @@
     content: "";
     position: absolute;
     left: 0;
-    top: -10px;
+    top: -9px;
     width: 38px;
     height: 38px;
     border: 2px solid @basic-grey;
   }
 
   &:hover + label::before {
+    border: 2px solid @special-green-underline;
+  }
+
+  &:focus + label::before {
     border: 2px solid @special-green-underline;
   }
 
