--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -11,15 +11,15 @@
 
   @media (min-width: @tablet-width) {
     min-width: 768px;
-    padding-top: 57px;
+    padding-top: 55px;
     padding-bottom: 57px;
   }
 
   @media (min-width: @desktop-width) {
     width: 1150px;
     padding: 50px;
-    padding-top: 93px;
-    padding-bottom: 105px;
+    padding-top: 97px;
+    padding-bottom: 103px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: min-content  1fr min-content;
@@ -37,7 +37,6 @@
     width: 768px;
     margin: 0 auto;
     padding: 0 50px;
-    //padding-top: 30px;
     padding-bottom: 42px;
     display: flex;
     flex-direction: row;
@@ -48,8 +47,8 @@
     width: auto;
     margin: 0;
     padding: 0;
-    margin-top: 50px;
-    margin-bottom: 26px;
+    margin-top: 47px;
+    margin-bottom: 29px;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
@@ -70,7 +69,7 @@
     width: 768px;
     margin: 0 auto;
     padding: 0 50px;
-    padding-bottom: 50px;
+    padding-bottom: 48px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -103,7 +102,7 @@
 
   @media (min-width: @tablet-width) {
     height: 457px;
-    margin-bottom: 52px;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
@@ -172,15 +171,15 @@
 
   @media (min-width: @tablet-width) {
     display: block;
-    width: 47px;
+    width: 50px;
     height: 87px;
     background-image: url("../img/flag.svg");
     background-repeat: no-repeat;
-    background-position: top 6px left 0;
+    background-position: top 6px right 3px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 10px;
+    margin-top: 7px;
     margin-left: 63px;
   }
 }
@@ -204,6 +203,11 @@
   border-bottom-color: @special-green-underline;
 
   &:hover {
+    color: @special-green-underline-2;
+    border-bottom-color: @special-green-underline-2;
+  }
+
+  &:focus {
     color: @special-green-underline-2;
     border-bottom-color: @special-green-underline-2;
   }
