--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -3,7 +3,8 @@
   font-weight: 700;
   font-size: 19px;
   line-height: 18px;
-  padding-right: 15px;
+  padding-right: 27px;
+  margin-top: -4px;
 
   @media (min-width: @tablet-width) {
     padding-right: 27px;
@@ -15,10 +16,15 @@
 }
 
 .copyright__link {
-  padding-top: 8px;
+  padding-top: 22px;
+  padding-bottom: 17px;
   color: @basic-green;
 
   &:hover svg {
+    color: @special-green-underline-2;
+  }
+
+  &:focus svg {
     color: @special-green-underline-2;
   }
 
@@ -28,6 +34,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-top: -16px;
+    margin-top: -11px;
+    padding: 0;
   }
 }
