--- a/source/less/blocks/radio.less
+++ b/source/less/blocks/radio.less
@@ -5,7 +5,7 @@
   line-height: 18px;
   font-weight: 700;
   color: @basic-black;
-  margin-bottom: 20px;
+  margin-bottom: 23px;
 
   &:last-child {
     margin-bottom: 0;
@@ -36,7 +36,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: -7px;
+    top: -6px;
     width: 40px;
     height: 40px;
     border: 2px solid @basic-grey;
@@ -44,6 +44,10 @@
   }
 
   &:hover + label::before {
+    border: 2px solid @special-green-underline;
+  }
+
+  &:focus + label::before {
     border: 2px solid @special-green-underline;
   }
 
