--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -27,8 +27,8 @@
   @media (min-width: @tablet-width) {
     box-shadow: none;
     padding-right: 37px;
-    padding-top: 22px;
-    padding-bottom: 32px;
+    padding-top: 20px;
+    padding-bottom: 34px;
 
     &:last-child {
       padding-right: 0;
@@ -61,6 +61,10 @@
   opacity: 1;
 
   &:hover {
+    opacity: 0.6;
+  }
+
+  &:focus {
     opacity: 0.6;
   }
 
