--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -48,6 +48,7 @@
     font-size: 43px;
     line-height: 50px;
     padding-top: 77px;
+    margin-left: -8px;
   }
 
   @media (min-width: @desktop-width) {
