Модальное окно, JS, маркер карты

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -37,6 +37,10 @@
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
   }
 
+  &:focus-within {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
   &:active {
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
   }
@@ -91,6 +95,10 @@
 
 .card__link-image {
   &:hover + .card__container {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:focus + .card__container {
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
   }
 
