--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -63,6 +63,15 @@
         inset 1px 0 0 @special-grey-lighter;
     }
 
+    &:focus-within::after {
+      box-shadow:
+        0 6px 10px rgba(0, 0, 0, 0.1),
+        inset 0 1px 0 @special-grey-lighter,
+        inset 0 -1px 0 @special-grey-lighter,
+        inset -1px 0 0 @special-grey-lighter,
+        inset 1px 0 0 @special-grey-lighter;
+    }
+
     &:active::after {
       box-shadow:
         0 3px 5px rgba(0, 0, 0, 0.1),
