--- a/source/less/style.less
+++ b/source/less/style.less
@@ -28,3 +28,7 @@
 @import "blocks/social.less";
 @import "blocks/special-list.less";
 @import "blocks/slider.less";
+@import "blocks/modal-overlay.less";
+@import "blocks/modal-cart.less";
+@import "blocks/form-size.less";
+@import "blocks/checkbox-cart.less";
