--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -12,6 +12,8 @@
 @special-green-underline-2: #46C1AE;
 @special-grey-divide: #e5e5e5;
 @special-green-icon: #149080;
+@special-grey-modal: #c6c6c6;
+@special-green-hover: #59D5BC;
 
 
 // Viewports
