--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -108,6 +108,7 @@
     position: absolute;
     top: 147px;
     left: calc(50% - 21px);
+    z-index: 15;
   }
 
   @media (min-width: @tablet-width) {
@@ -259,5 +260,19 @@
     grid-row-start: -1;
     grid-row-end: -2;
     align-self: end;
+  }
+}
+
+.contacts__map-container {
+  width: 100%;
+  height: 454px;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
   }
 }
