Позиция модального окна по центру, скрипт Слайдера с переполнением

--- a/source/less/blocks/modal-overlay.less
+++ b/source/less/blocks/modal-overlay.less
@@ -10,6 +10,9 @@
   background-color: rgba(@basic-white, 0.9);
   visibility: hidden;
   opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &--open {
     visibility: visible;
