--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -522,6 +522,7 @@
   min-height: 142px;
   border: 2px solid @basic-grey;
   padding: 17px;
+  background-color: @basic-white;
 
   &:hover {
     border-color: @special-green-underline;
