--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -234,6 +234,9 @@
 }
 
 .video__play-button {
+  width: 101px;
+  height: 77px;
+  background-image: url("../img/play-button.svg");
   position: absolute;
   top: calc(50% - 38px);
   left: calc(50% - 50px);
