Исправлены ошибки замены

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -117,7 +117,7 @@
     display: none;
   }
 
-  .main-nav--n.min.js .main-nav__toggle {
+  .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 }
