Изменения меню, скрипт

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -24,7 +24,7 @@
   }
 
   &:active {
-    color: fade(@basic-white, 30%);
+    color: rgba(@basic-white, 0.3);
   }
 
   @media (min-width: @tablet-width) {
