--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -120,4 +120,12 @@
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+
+  .main-nav--nojs .user-list__item {
+    display: block;
+  }
 }
