--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -54,6 +54,7 @@
   @media (min-width: @tablet-width) {
     padding: 50px;
     padding-bottom: 85px;
+    background-color: @basic-white;
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     display: grid;
