--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "global.less";
 @import "typography.less";
 @import "blocks/page.less";
+@import "blocks/page-body.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
