--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -8,6 +8,7 @@
 }
 
 .slogan__wrapper {
+  //background-color: @special-grey-background;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: top -15px center;
