Изменения согласно критериев

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -234,7 +234,7 @@
 
   &:active {
     color: @special-green-underline-2;
-    border-bottom-color: fade(@special-green-underline-2; 10%);
+    border-bottom-color: rgba(@special-green-underline-2, 0.1);
   }
 }
 
