--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -164,7 +164,7 @@
 
   &--link:active {
     color: @special-green-underline-2;
-    border-bottom-color: fade(@special-green-underline-2; 10%);
+    border-bottom-color: rgba(@special-green-underline-2, 0.1);
   }
 
   @media (min-width: @tablet-width) {
