--- a/source/less/blocks/checkbox-cart.less
+++ b/source/less/blocks/checkbox-cart.less
@@ -4,14 +4,14 @@
   padding: 17px 0 16px;
   text-align: center;
   cursor: pointer;
-  border: 2px solid fade(@basic-grey, 10%);
+  border: 2px solid rgba(@basic-grey, 0.1);
 
   &:hover {
-    border: 2px solid fade(@basic-grey, 30%);
+    border: 2px solid rgba(@basic-grey, 0.3);
   }
 
   &:focus {
-    border: 2px solid fade(@basic-grey, 30%);
+    border: 2px solid rgba(@basic-grey, 0.3);
   }
 
   &:active {
@@ -24,7 +24,7 @@
 }
 
 .checkbox-cart__control:focus + .checkbox-cart__label {
-  border: 2px solid fade(@basic-grey, 30%);
+  border: 2px solid rgba(@basic-grey, 0.3);
 }
 
 .checkbox-cart__control:checked:focus + .checkbox-cart__label {
