--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -38,7 +38,7 @@
   @media (min-width: @desktop-width) {
     padding-top: 32px;
     padding-bottom: 27px;
-    border-right: 1px solid fade(@basic-black, 10%);
+    border-right: 1px solid rgba(@basic-black, 0.1);
     height: inherit;
 
     &:last-child {
