--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -191,6 +191,8 @@
   cursor: pointer;
   padding: 0;
   margin-right: -3px;
+  display: flex;
+  align-items: center;
 
   &:focus .card__button-icon {
     color: @basic-green;
