--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -25,6 +25,7 @@
 
   &:active {
     color: rgba(@basic-white, 0.3);
+    background-color: @basic-grey;
   }
 
   @media (min-width: @tablet-width) {
