--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -109,11 +109,7 @@
 }
 
 @media (max-width: @mobile-width-only) {
-  .main-nav--closed .site-list__item {
-    display: none;
-  }
-
-  .main-nav--closed .user-list__item {
+  .main-nav--closed .main-nav__list {
     display: none;
   }
 
@@ -121,11 +117,11 @@
     display: none;
   }
 
-  .main-nav--nojs .site-list__item {
-    display: block;
+  .main-nav--nojs .main-nav__list {
+    display: flex;
   }
 
-  .main-nav--nojs .user-list__item {
-    display: block;
+  .main-nav--nojs .main-nav__list--special {
+    display: none;
   }
 }
